# parkkihubi

./: .coveragerc  .dockerignore  .gitignore  .sanitizerconfig  .travis.yml  Dockerfile  LICENSE  README.md  conftest.py  django-entrypoint.sh  docker-compose.yml  docker-entrypoint  env.example  generate-docs  local_settings.py.tpl_dev  manage.py  post-update  pre-update  pyproject.toml  requirements-cov.txt  requirements-dev.in  requirements-dev.txt  requirements-prequ.in  requirements-prequ.txt  requirements-style.in  requirements-style.txt  requirements-test.in  requirements-test.txt  requirements.in  requirements.txt  run-pytest  setup.cfg  setup.py  time_check_parking.py  tox.ini  zshrc
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: main.yaml
dashboard/: LICENSE  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
dashboard/public/: index.html  manifest.json
dashboard/src/: actions.ts  bootstrap.scss  config.ts  converters.ts  dispatchers.ts  global.d.ts  index.css  index.tsx  react-app-env.d.ts  reducers.ts  store.ts  types.ts
docs/: .gitignore  data_model.txt  method_override.md
docs/api/: config.json  description.md  enforcement.yaml  internal.yaml  operator.yaml  public.yaml
docs/doc-generator/: package-lock.json  package.json  pnpm-lock.yaml
parkings/: __init__.py  admin.py  admin_utils.py  anonymization.py  apps.py  authentication.py  cron.py  exception_handler.py  fields.py  pagination.py  performance_tester.py  validators.py
parkings/anonymization/: __init__.py
parkings/api/: common.py  common_permit.py  url_utils.py  utils.py
parkings/factories/: __init__.py  address.py  enforcement_domain.py  faker.py  gis.py  monitor.py  operator.py  parking.py  parking_area.py  parking_check.py  permit.py  region.py  terminal.py  user.py
parkings/forecasts/: cache_parking_counts.py  forecast_parking_counts.py  utils.py
parkings/importers/: __init__.py  geojson_importer.py  geojson_parking_areas.py  geojson_payment_zones.py  geojson_permit_areas.py  parking_areas.py  payment_zones.py  permit_areas.py  regions.py  utils.py  wfs_importer.py
parkings/migrations/: 0001_initial.py  0002_translatable_verbose_names.py  0003_parking_device_id_and_location_nullable.py  0004_add_parking_area.py  0005_add_parking_area_to_parking.py  0006_remove_obsolete_stuff.py  0007_rename_parking_area_fields.py  0008_fix_some_verbose_names.py  0009_disable_registration_number_validation.py  0010_change_time_end_nullable.py  0011_add_parking_area_related_name.py  0012_parking_terminal.py  0013_parking_terminal_data.py  0014_normalized_reg_num.py  0015_fill_normalized_reg_nums.py  0016_normalized_reg_num_noblank.py  0017_region.py  0018_parking_region.py  0019_permits.py  0020_add_paymentzone.py  0021_add_permitarea.py  0022_unique_area_identifiers.py  0023_permitlookupitem.py  0024_permitlookupitem_index.py  0025_parking_check.py  0026_fix_permit_regnum_length.py  0027_parkingcheck_performer.py  0028_digital_disc_changes.py  0029_alter_payment_zone_id.py  0029_enforcement_domain.py  0029_enforcementdomain.py  0029_parkingcount.py  0030_alter_permit_area_id.py  0030_domain_data.py  0030_more_ed.py  0031_default_domain.py  0031_enforcement_domain.py  0032_alter_permit_area_id.py  0032_domain_data.py  0032_merge_parking_count.py  (+18 more)
parkings/models/: __init__.py  address.py  constants.py  enforcement_domain.py  mixins.py  monitor.py  operator.py  parking.py  (+7 more)
parkkihubi/: __init__.py  apps.py  middleware.py  settings.py  settings_test.py  urls.py  wsgi.py
sanitizers/: parkkihubi.py
(+159 files in other folders)
