[project]
name = "parkkihubi"
version = "3.1.0+post0-dev1"
description = "Hub for parking information"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>4",
    "django-cors-headers",
    "django-environ",
    "django-filter",
    "django-sanitized-dump",
    "djangorestframework",
    "djangorestframework-gis",
    "drf-jwt-2fa>0.4",
    "lxml",
    "owslib",
    "psycopg2",
    "python-dateutil",
    "python-memcached",
    "pytz",
    "requests",
]

[dependency-groups]
deploy = [
    "redis>=7.4.0",
    "sentry-sdk>=2.57.0",
    "uwsgi>=2.0.31",
]
dev = [
    "factory-boy",
    "freezegun",
    "django-extensions",
    "pytest",
    "pytest-cov",
    "pytest-django",
    "pytest-factoryboy",
    "pyyaml",
    "requests-mock",
]
extra-dev = [
    "autoflake",
    "autopep8",
    "ipython",
    "isort",
    "nodeenv>=1.10.0",
    "pydocstyle",
    "tox",
    "tox-uv-bare",
    "werkzeug",
]
style=[
    "flake8",
    "flake8-isort",
    "flake8-print",
    "pep8-naming",
]

[tool.uv]
default-groups = "all"
