[project]
name = "parkkihubi"
version = "4.0.0"
description = "Hub for parking information"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>4",
    "django-cors-headers",
    "django-environ",
    "django-filter",
    "django-sanitized-dump",
    "djangorestframework",
    "djangorestframework-gis",
    "drf-jwt-2fa>0.4",
    "lxml",
    "owslib",
    "psycopg2",
    "python-dateutil",
    "python-memcached",
    "pytz",
    "requests",
]

[dependency-groups]
deploy = [
    "redis>=7.4.0",
    "sentry-sdk>=2.57.0",
    "uwsgi>=2.0.31",
]
dev = [
    "factory-boy",
    "freezegun",
    "django-extensions",
    "pytest",
    "pytest-cov",
    "pytest-django",
    "pytest-factoryboy",
    "pyyaml",
    "requests-mock",
]
extra-dev = [
    "autoflake",
    "autopep8",
    "ipython",
    "isort",
    "nodeenv>=1.10.0",
    "pydocstyle",
    "tox",
    "tox-uv-bare",
    "werkzeug",
]
style=[
    "flake8",
    "flake8-isort",
    "flake8-print",
    "pep8-naming",
]

[tool.uv]
default-groups = "all"

[tool.pytest]
strict = true
pythonpath = ["."]
DJANGO_SETTINGS_MODULE = "parkkihubi.settings_test"
addopts = ["--doctest-modules", "--reuse-db"]
doctest_optionflags = ["NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
precision = 1
show_missing = true
omit = [
     "*/.tox/*",
     "manage.py",
     "time_check_parking.py",
]
